<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="https://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/actions"
        android:icon="@drawable/ic_menu_icon"
        android:title="@string/actions"
        app:showAsAction="ifRoom|withText">

        <menu xmlns:android="http://schemas.android.com/apk/res/android">
            <item
                android:id="@+id/inputs"
                android:title = "@string/inputs" />
            <item
                android:id="@+id/login"
                android:title = "@string/login" />
        </menu>
    </item>

    <item
        android:id="@+id/jump"
        android:icon="@drawable/ic_menu_icon"
        android:title="@string/jump"
        app:showAsAction="ifRoom|withText">

        <menu xmlns:android="http://schemas.android.com/apk/res/android">
            <item
                android:id="@+id/output_account_401k_menu_item"
                android:title = "@string/output_header_401k" />

            <item
                android:id="@+id/output_account_403b_menu_item"
                android:title = "@string/output_header_403b" />

            <item
                android:id="@+id/output_brokerage_menu_item"
                android:title = "@string/output_header_brokerage" />

            <item
                android:id="@+id/output_account_cash_balance_menu_item"
                android:title = "@string/output_header_cash_balance" />

            <item
                android:id="@+id/output_deductions_menu_item"
                android:title = "@string/output_header_deductions" />

            <item
                android:id="@+id/output_expenses_menu_item"
                android:title = "@string/output_header_expenses" />

            <item
                android:id="@+id/output_income_graph_menu_item"
                android:title = "@string/output_header_income_graph" />

            <item
                android:id="@+id/output_account_roth_ira_menu_item"
                android:title = "@string/output_header_ira_roth" />

            <item
                android:id="@+id/output_account_traditional_ira_menu_item"
                android:title = "@string/output_header_ira_traditional" />

            <item
                android:id="@+id/output_pension_menu_item"
                android:title = "@string/output_header_pension" />

            <item
                android:id="@+id/output_salary_menu_item"
                android:title = "@string/output_header_salary" />

            <item
                android:id="@+id/output_savings_menu_item"
                android:title = "@string/output_header_savings" />


            <item
                android:id="@+id/output_savings_graph_menu_item"
                android:title = "@string/output_header_savings_graph" />

            <item
                android:id="@+id/output_social_security_menu_item"
                android:title = "@string/output_header_social_security" />

            <item
                android:id="@+id/output_taxes_menu_item"
                android:title = "@string/output_header_taxes" />
        </menu>
    </item>
</menu>