<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100">

    <TextView
        android:id="@+id/textView"
        android:text="@string/title_home"
        android:textSize="30sp"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="16"/>

    <Button
        android:id="@+id/button4"
        android:text="@string/button_inputs"
        android:textSize="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="42" />

    <Button
        android:id="@+id/button5"
        android:text="@string/button_outputs"
        android:textSize="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="42" />

</LinearLayout>